Move trx_commit_for_mysql(trx) calls in row0mysql.c before calls to row_mysql_unlock_data_dictionary(trx), fixing bug #19727.